--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,20 @@
+/*----- Colors ------*/
+
+.bg-color-name-title {
+    background-color: #676767;
+}
+
+/*----- Heading ------*/
+
 header {
     margin: 0;
 }
 
-logo {
+.heading {
+    margin-left: 50px;
+}
+
+.logo {
     background: url(/assets/images/rosie.jpg);
     background-position: center;
     background-repeat: no-repeat;
@@ -11,4 +23,12 @@ logo {
     transition: all .5s ease-in-out;
     -moz-transition: all .5s ease-in-out;
     -webkit-transition: all .5s ease-in-out;
+}
+
+.name {
+    font-family: "Exo", system-ui;
+    font-weight: 100;
+    font-size: 46px;
+    margin-top: 50px;
+    color: #fff;
 }
