--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,3 +70,34 @@ header {
     font-size: 14px;
     padding: 0;
 }
+
+.menuitem {
+    height: 120px;
+    text-align: center;
+    padding: 0;
+}
+
+.menuitem a {
+    width: 100%;
+    text-decoration: none;
+    color: #fff;
+    height: 120px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.menuitem a i {
+    color: #fafafa;
+    font-size: 26px;
+}
+
+.menuitem span {
+    width: 100%;
+    text-transform: uppercase;
+    padding-top: 10px;
+    font-size: 14px;
+    font-weight: 300;
+    letter-spacing: 2px;
+}
