--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -250,3 +250,18 @@ footer {
 #footer-details {
     padding: 20px;
 }
+
+/*---- Three Reasons ----*/
+
+.three-reasons-icon {
+    font-size: 26px;
+    color: #e67e22;
+}
+
+.three-reasons-heading {
+    margin-bottom: 15px;
+}
+
+.col-2 {
+    text-align: center;
+}
