--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,9 @@
     background-color: #fff;
 }
 
+.bg-color-personal-info {
+    background-color: #f4f4f4;
+}
 .ui-menu-color-home {
     background-color: #e67e22;
 }
@@ -251,7 +254,7 @@ footer {
     padding: 20px;
 }
 
-/*---- Three Reasons ----*/
+/*----------------------------- Three Reasons ----*/
 
 .three-reasons-icon {
     font-size: 26px;
@@ -264,4 +267,39 @@ footer {
 
 .col-2 {
     text-align: center;
+}
+
+/*----------------------------- Personal Info ----*/
+
+.personal-info-item {
+    margin-bottom: 20px;
+    display: block;
+    clear: both;
+}
+
+.personal-info-item .key,
+.personal-info-item .value {
+    padding-right: 8px;
+    display: inline-block;
+}
+
+.personal-info-item .key p,
+.personal-info-item .value p {
+    margin: 0;
+}
+
+.personal-info-item .key {
+    width: 30%;
+    margin-right: 21px;
+    padding-top: 2px;
+    vertical-align: top;
+}
+
+.personal-info-item .key p {
+    font-weight: 700;
+}
+
+.personal-info-item .value {
+    position: relative;
+    width: 60%;
 }
