--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/*----- Colors ------*/
+/*--------------------------------- Colors ------*/
 
 .bg-color-name-title {
     background-color: #676767;
@@ -27,7 +27,7 @@
     background-color: #525252;
 }
 
-/*---- Special paddings, margins, text ----*/
+/*----------- Special paddings, margins, text ----*/
 
 h1,
 h2,
@@ -67,7 +67,7 @@ h4 {
     margin-bottom: 40px;
 }
 
-/*----- Heading ------*/
+/*-------------------------------- Heading ------*/
 
 header {
     margin: 0;
@@ -153,7 +153,7 @@ header {
     letter-spacing: 2px;
 }
 
-/* Sweep To Bottom */
+/*------------------------- Sweep To Bottom -----*/
 .hvr-sweep-to-bottom {
     display: inline-block;
     vertical-align: middle;
@@ -302,4 +302,27 @@ footer {
 .personal-info-item .value {
     position: relative;
     width: 60%;
+}
+
+/*-------------------------------- Skills --------*/
+
+.progress {
+    position: relative;
+    height: 25px;
+    margin-bottom: 4px;
+}
+
+.progress-type {
+    position: absolute;
+    left: 0px;
+    font-weight: 400;
+    padding: 3px 30px 2px 10px;
+    color: #fafafa;
+    background-color: rgba(25, 25, 25, 0.2);
+    width: 140px;
+    height: 100%;
+}
+
+.progress-section {
+    margin: 40px 20px;
 }
